ejercicio1_13/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project
  template:
    metadata:
      labels:
        app: project
    spec:
      volumes:
        - name: project-data
          emptyDir: {}
      containers:
        - name: project
          image: project-app:1.13
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: project-data
              mountPath: /usr/src/app/data
