ejercicio1_13/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: project
